product_docs/docs/edbctl/1.3/using/edbctl_credential.mdx
---
title: edbctl credential
navTitle: edbctl credential
description: Use the edbctl utility to creates and manage authentication credentials.
---

This command creates and manages authentication credentials that allow users to access the resources. It allows you to import an Access API key as a login credential or set the environment variable `HCP_ACCESS_KEY`.

## Commands

The `edbctl credential` command has following options:

-   [edbctl credential list](edbctl_credential.mdx#edbctl-credential-list) - Shows the credentials.
-   [edbctl credential import-access-key](edbctl_credential.mdx#edbctl-credential-import-access-key) - Imports an Access API key for authentication.
-   [edbctl credential delete](edbctl_credential.mdx#edbctl-credential-delete) - Deletes the credentials.

### edbctl credential list

This command shows all the credentials. Optionally, use the `--name` option to list a specific credential.

```
edbctl credential list [options]
```

Where `options` are:

```
-h, --help            Help for list.
-n, --name string     Credential name (optional). Specify the name of the credential to list.
-o, --output string   [table json yaml xml] \(default "table")
```

These examples show how to list the credentials:

```
# List all the credentials
edbctl credential list

# List a specific credential
edbctl credential list -n <credential_name>
```

### edbctl credential import-access-key

This command is used to import an Access API key. You can get the Access API key from the server portal to authenticate. You can also use this credential for further operations.

```
edbctl credential import-access-key [--name --access-key --address] [options]
```

Where, `options` are:

```
-n, --name string         Credential name (required). The unique name for the credential.
-k, --access-key string   Access key (required). The API key used for authentication.
-a, --address string      Authenticator host address (required).
-I, --interactive         Execute command interactively.
-h, --help                Help for import-access-key.
```

These examples show how to use the `import-access-key` command:

```
# Import the Access API key:
edbctl credential import-access-key

# Import the specific Access API key using the name, access-key, and address:
edbctl credential import-access-key --name cred1 --access-key <your-key-here> --address <authenticator-host-address-here format: [http|https]://host:port example: http://localhost:8080 and https://secure.portal.net:443>
>

edbctl credential import-access-key -n cred1 -k <your-key-here> -a <authenticator-host-address-here format: [http|https]://host:port example: http://localhost:8080 and https://secure.portal.net:443>
```

### edbctl credential delete

This command deletes the specific credential with name.

```
edbctl credential delete <credential_name> [options]
```

Where `options` are:

```
-h, --help          Help for delete.
-I, --interactive   Execute command interactively.
-y, --yes           Auto-confirm all confirmations
```

This example shows how to delete the credential:

```
# Delete the credential with <credential_name> name:
edbctl credential delete <credential_name>
```
